Build with local copy of fsc.exe

--- a/Directory.build.props
+++ b/Directory.build.props
@@ -2,4 +2,7 @@
     <PropertyGroup Condition="'$(NCRUNCH)' == '1' ">
         <PaketRestoreDisabled>True</PaketRestoreDisabled>
     </PropertyGroup>
+    <PropertyGroup>
+        <FscToolPath>D:\git\visualfsharp\Release\net40\bin</FscToolPath>
+    </PropertyGroup>
 </Project>
